--- a/src/createzcashconfdialog.ui
+++ b/src/createzcashconfdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Configure zcash.conf</string>
+   <string>Configure ycash.conf</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="1">
