--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1167,7 +1167,7 @@
   </action>
   <action name="actionPay_URI">
    <property name="text">
-    <string>Pay zcash &amp;URI...</string>
+    <string>Pay ycash &amp;URI...</string>
    </property>
   </action>
   <action name="actionConnect_Mobile_App">
@@ -1180,7 +1180,7 @@
   </action>
   <action name="actionRequest_zcash">
    <property name="text">
-    <string>Request zcash...</string>
+    <string>Request ycash...</string>
    </property>
   </action>
  </widget>
