--- a/src/connection.ui
+++ b/src/connection.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>ZecWallet</string>
+   <string>YecWallet</string>
   </property>
   <property name="modal">
    <bool>true</bool>
