Format nullifier migration tool

--- a/src/nullifiermigration.ui
+++ b/src/nullifiermigration.ui
@@ -47,6 +47,12 @@ All YEC from the following addresses will be consolidated into the destination a
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_2">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="text">
       <string>Destination Address</string>
      </property>
