--- a/src/settings.ui
+++ b/src/settings.ui
@@ -179,9 +179,9 @@
        <item row="12" column="0" colspan="2">
         <widget class="QLabel" name="label_10">
          <property name="text">
-          <string>Connect to the internet to fetch ZEC prices</string>
+          <string>Connect to the internet to fetch YEC prices</string>
          </property>
-        </spacer>
+        </widget>
        </item>
        <item row="2" column="0">
         <spacer name="horizontalSpacer">
@@ -264,7 +264,7 @@
            <height>40</height>
           </size>
          </property>
-        </widget>
+        </spacer>
        </item>
        <item row="7" column="0">
         <widget class="QCheckBox" name="chkTor">
@@ -283,7 +283,7 @@
        <item row="11" column="0" colspan="2">
         <widget class="QCheckBox" name="chkFetchPrices">
          <property name="text">
-          <string>Fetch ZEC / USD prices</string>
+          <string>Fetch YEC / USD prices</string>
          </property>
         </widget>
        </item>
