translucent theme "matrix" added

--- a/application.qrc
+++ b/application.qrc
@@ -7,6 +7,9 @@
         <file>res/loading.gif</file>
         <file>res/paymentreq.gif</file>
         <file>res/icon.ico</file>
+        <file>res/images/icons/tick-white.png</file>
+        <file>res/images/icons/tick.png</file>
+        <file>res/images/icons/close.png</file>
     </qresource>
     <qresource prefix="/img">
         <file>res/zcashdlogo.gif</file>
@@ -25,6 +28,7 @@
         <file>res/css/dark.css</file>
         <file>res/css/default.css</file>
         <file>res/css/light.css</file>
+        <file>res/css/matrix.css</file>
     </qresource>
     <qresource prefix="/images/blue">
         <file>res/images/blue/unchecked.png</file>
@@ -36,4 +40,8 @@
         <file>res/images/blue/blue_rightArrow_small.png</file>
         <file>res/images/blue/blue_qtreeview_selected.png</file>
     </qresource>
+    <qresource prefix="/backgrounds">
+        <file>res/images/backgrounds/matrix.jpg</file>
+    </qresource>
+    <qresource prefix="/"/>
 </RCC>
