opaque white image background replaced with fully transparent

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -22,7 +22,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -876,7 +876,7 @@
                </sizepolicy>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: #fff</string>
+               <string notr="true">background-color: rgba(255,255,255,128);</string>
               </property>
               <property name="text">
                <string/>
