--- a/res/css/matrix.css
+++ b/res/css/matrix.css
@@ -16,7 +16,10 @@ QMainWindow
 
 QDialog
 {
-    background-color: rgb(0, 0, 0);
+
+    background-color: rgb(0, 32, 0);
+    border: 2px solid rgb(0, 64, 0);
+    border-radius: 4px;
 }
 
 QMenuBar {
